# annotated-coconut-pytorch

./: 3_能跑.py  README.md  gpt2.py  pyproject.toml  test.py  test_results_decoded.json  trainCoconut.py  trainTemplate.py  一个例子_能跑.py
.github/workflows/: test.yml
coconut_pytorch/: __init__.py  coconut.py  einops.repeat_demo.py  multi_stream_coconut.py  pad_sequence_demo.py
data/gsm8k/: middletrain.txt  smalltest.txt  smalltrain.txt  smallvalid.txt  test.txt  valid.txt
demo/: Tensor_demo.py  ignore_index.py  masked_fill_demo.py
src/: data.py  train.py  utils.py
src/coconut_pytorch/: __init__.py  coconut.py  gpt2demo_by_gpt4_能跑.py  gpt2demo_by_o1_能跑.py
tests/: test_coconut.py
