[project]
name = "coconut-pytorch"
version = "0.0.23"
description = "Coconut in Pytorch"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.8"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'transformers',
    'attention mechanism',
    'continuous latent tokens',
    'reasoning'
  ]
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
  ]

dependencies = [
    'einops>=0.8.0',
    'rotary-embedding-torch>=0.5.3',
    'x-transformers>=1.42.26',
    'torch>=2.4'    
]

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.2",
    "pytest>=8.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[project.urls]
Homepage = "https://pypi.org/project/coconut-pytorch/"
Repository = "https://github.com/lucidrains/coconut-pytorch"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["coconut_pytorch"]
